user can register and create upcoming and past events

--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -2,12 +2,14 @@
 
 one:
   eventype: MyString
+  description: MyText
   location: MyString
   date: MyString
   user: one
 
 two:
   eventype: MyString
+  description: MyText
   location: MyString
   date: MyString
   user: two
