--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,9 +3,9 @@
 one:
   username: MyString
   email: MyString
-  password_digest: MyString
+  user_token: MyString
 
 two:
   username: MyString
   email: MyString
-  password_digest: MyString
+  user_token: MyString
