--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  eventype: MyString
-  description: MyText
-  location: MyString
-  date: MyString
-  user: one
+michael:
+  title: Faker::Book.title
+  description: Faker::TvShows::TheITCrowd.quote
+  date: time_rand
+  location: Faker::Address.full_address
+  creator: michael
 
-two:
-  eventype: MyString
-  description: MyText
-  location: MyString
-  date: MyString
-  user: two
+archer:
+  title: Faker::Book.title
+  description: Faker::TvShows::TheITCrowd.quote
+  date: time_rand
+  location: Faker::Address.full_address
+  creator: archer
